style.css
html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

header {
	height: 70px;
	width: 100vw;
	top: 0;
	background-color: white;
	/*grid-area: header;*/
	position: fixed;
	left: 0;
}
a {
	text-decoration: none;
}

#navbar {
	display: flex;	
	justify-content: space-between;
	margin-top: 1em;
	margin-right: 2em;
	margin-left: 2em;
}

#brand-name {
	font-size: 1.2em;
}

.fa-youtube {
	color: red;
	padding: 0.1em;
}

#icons-right i {
	padding: 0 0.5em;
}

.avatar {
	font-size: 2em;
}

#avatar {
	font-size: 2em;
}

.fa-bars {
	margin-right: 1em;
}

i {
	color: #A0A0A0;
	font-size: 1.2em;
}


#search {
	width: 30rem;
	/*height: ;*/
}

#main {
	display: flex;
	padding: 50px 0;
	margin: 3em;
	/*border: 1px solid black;*/
}

#main-left {
  display: flex;
  flex-direction: column;
}

#main-content {
	height: 50vh;
	width: 70vw;
  	/*border: 3px solid red;*/
}

#video-section {
	display: flex;
	justify-content: center;
	/*align-items: center;*/
	flex-direction: column;
}

iframe {
	width: 100%;
}

#video-info {
	display: flex;
	/*border: 1px solid black;*/
}

#description {
	width: 60%;
}

#social-icons {
	align-self: flex-end;
}

#social-icons a {
	color: #A0A0A0;
	padding: 0 1em 0 0;

}

#views {
	color: #606060;
}

#video-feeds {
	height: 100vh;
	width: 30vw;
	background-color: green;
	grid-area: videofeeds;
}

#channel-info {
	display: flex;
	margin-top: 1em;
	
}

#left {
	width: 10em;
}

#right {
	display: flex;
	flex-direction: column;
}

#title-sub {
	display: flex;
	justify-content: space-between;
}

#channel-brand img {
	border-radius: 50%;
	height: 50px;
	width: 50px;
}

#subscription-box button{ 
	background: #EEEEEE;
	color: #696969;
 }

 #comment-count-sort {
 	display: flex;
 }

 #comment-count {
 	margin-right: 3em;
 }

.comment {
	display: flex;
}

#comment-input {
	margin: 1.2em 0;
}

#all-comments {
	margin: 1.2em 0;
}

.comment-info {
	margin-left: 1.2em;
}

.reaction a {
	margin-right: 1em;
}

.reaction {
	margin-bottom: 1em;
}

